5/29/2025
	Added 'Distance' type for conditional sum Location clues.
	Found and fixed bug in conditional line evaluation which was failing to respect a given comparator in certain cases.
	Added test cases.

3/24/2025 bis
	Added selection criterion for conditional sum and count clues to select digits in an increasing/decreasing pair along the line.
	Added clock quad constraints, which assert that the digits around a quad increase either clockwise or counterclockwise from some starting point. Negative constraint implemented, and test case provided.

3/24/2025
	Added support for sweeper cells to match all neighbors, not just the value of the sweeper cell.
	Added new selection criterion for conditional sums and counts to *not* match the parity, entropy, etc. of a taret cell.
	Added support for order sum cages (a list of cages ordered by increasing sum) to calculate the sum as if reading the cage as a base 10 number. Also fixed a bug which caused the previous code to fail.
	Added test cases.

3/20/2025
	Added support for ContiguousSum selection criterion for conditional sums and count. Included test case.
	Implemented new property "DigitSize", which can be used for "big/small" type constraints, particularly in conditional sums and counts. Included test case.
	
3/10/2025 ter
	Added some more test cases.

3/10/2025 bis
	Added RelatedDigit selection criterion for conditional sums and counts.
	Added support for sweeper cells using conditional sum selection criteria, allowing for many different types. Included negative constraint, and added test case.
	Added crust sum, crust digit instance, and star battle configuration options for crust cell sudoku. Reset the "enforceRegions" default for crust cells to False, and updated test cases accordingly. Added test case.
	Added support for indexed pair sums, and added test case.