@@ -1,3 +1,6 @@
+6/22/2025
+	Added support for Russian Doll clues (h/t oddlyeven)
+
 5/29/2025
 	Added 'Distance' type for conditional sum Location clues.
 	Found and fixed bug in conditional line evaluation which was failing to respect a given comparator in certain cases.
